# crystalcog

./: .gitignore  .guix-channel  ADVANCED_METACOGNITIVE_FEATURES.md  ADVANCED_REASONING_DOCUMENTATION.md  AGENT-ZERO-GENESIS.md  AGENT-ZERO-INTEGRATION.md  API_DOCUMENTATION.md  CMakeLists.txt  COGNITIVE_KERNEL_DOCUMENTATION.md  COGSERVER_INTEGRATION_TEST_VALIDATION.md  COMPREHENSIVE_TEST_SUITE_VALIDATION_REPORT.md  CONVERSION_EXAMPLES.md  CRYSTAL_INSTALL_VALIDATION_REPORT.md  DEPLOY_SCRIPT_VALIDATION_REPORT.md  DEVELOPMENT-ROADMAP.md  DISTRIBUTED_AGENT_NETWORKS.md  Dockerfile  Dockerfile.monorepo  Dockerfile.production  GUIX-EXAMPLES.md  HYPERGRAPH_STATE_PERSISTENCE_DOCUMENTATION.md  IMGUI_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINK_GRAMMAR_INTEGRATION_SUMMARY.md  MILESTONE_4_LANGUAGE_PROCESSING_SUMMARY.md  MONOREPO_SUMMARY.md  MOSES_FRAMEWORK_VALIDATION_REPORT.md  Makefile  NLP_STRUCTURE_VALIDATION_REPORT.md  OPENCOG_CRYSTAL_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_REPORT.md  PERSISTENCE_API_DOCUMENTATION.md  PYTHON_API_REFERENCE.md  QUERY_LANGUAGE_SUMMARY.md  README  README-GUIX.md  README.md  README_COMPLETE.md  (+48 more)
.c2/: Cargo.toml
.devcontainer/: Cargo.toml  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/redox/: Dockerfile  devcontainer.json
.github/: Cargo.toml  testing-config.yml
.github/agents/: crystalcog.md  my-agent.agent.md
.github/scripts/: generate_build_workflow.js  generate_cargo_toml.js  setup-opencog-gitpod.sh
.github/workflows/: README.md  asmoses.yml  atomspace.yml  attention.yml  build.yml  ci-atomspace.yml  ci-improved.yml  ci-org-gen-4.yml  ci-org-v2.yml  ci-org-v3.yml  ci-org-v7.yml  ci-org-v8.yml  ci-org.yml  ci.yml  cici.yml  clean.yml  codeql.yml  cogci.yml  cogserver.yml  cogutil.yml  consolidate-atomspace.yml  crci.yml  crystal-build.yml  crystal-comprehensive-ci.yml  docker-publish.yml  efficient-build.yml  fetch.yml  generate-build-workflow.yml  generate-cargo-commit.yml  generate-cargo-toml.yml  generate-next-steps.yml  gitpod (1).yml  guix.yml  integrate-modules.yml  main.yml  miner.yml  monorepo-build.yml  msvc.yml  multi-platform-build.yml  oc (1).yml  (+18 more)
.idx/: dev.nix
agents/: CMakeLists.txt  Cargo.toml
benchmarks/: agent_zero_performance.cr  atomspace_benchmark.cr  comprehensive_performance_demo.cr
config/: CMakeLists.txt  agent-zero-system.scm
config/production/: supervisord.conf
config/production/nginx/: nginx.conf
config/production/prometheus/: prometheus.yml
crystal-lang/: README.md
crystal-lang/install/: README.md  install-via-apt.sh
docker/: CMakeLists.txt  Cargo.toml
docker/opencog/lang-pairs/scripts/: count-pairs-done.sh
docs/: ADVANCED_PATTERN_MATCHING.md  AI_INTEGRATION.md  ATTENTION_ALLOCATION.md  CI-CD-PIPELINE.md  COGSERVER_API.md  CRYSTAL_INSTALLATION.md  DISTRIBUTED_ATOMSPACE_CLUSTERING.md  FOCUSED_ECAN_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LinkGrammar.md  OPENCOG_CORE_LIBRARIES.md  PERFORMANCE_PROFILING_GUIDE.md  PLN-REASONING-MODULE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_SETUP_VALIDATION.md  ROADMAP_TRACKING.md  SYSTEM_IMAGE_GENERATION.md  SYSTEM_IMAGE_VALIDATION_REPORT.md  TEST_AUTOMATION_VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  memory_benchmarking.md  moses_framework.md
examples/: agent-zero-pln-usage.scm  distributed_atomspace_demo.cr  moses_demo.cr
profile/: CMakeLists.txt  Cargo.toml  README.md
rest-api-documentation/: CMakeLists.txt  Cargo.toml  index.html
scripts/: CMakeLists.txt  README.md  build-monorepo.sh  demo-monorepo.sh  generate-system-image.sh  install-crystal.sh  test-runner.sh  validate-crystal-install.sh  validate-deploy.sh  validate-roadmap.js  validate-system-image-deps.sh  validate_performance.cr
scripts/agent-zero/: build-agent-zero.sh  demo-agent-zero.sh
scripts/production/: README.md  deploy.sh  healthcheck.sh  setup-production.sh
spec/: cpp_comparison_benchmark.cr  crystalcog_spec.cr  perf_benchmark.cr  perf_simple.cr  spec_helper.cr  test_atomspace_perf.cr
spec/agent-zero/: distributed_agents_spec.cr
spec/ai_integration/: ai_integration_spec.cr
spec/atomspace/: atom_spec.cr  atomspace_main_spec.cr  atomspace_module_spec.cr  atomspace_spec.cr  distributed_cluster_spec.cr  truthvalue_spec.cr
spec/attention/: allocation_engine_spec.cr  attention_bank_spec.cr  attention_core_spec.cr  attention_main_spec.cr  attention_spec.cr  diffusion_spec.cr  rent_collector_spec.cr
spec/cogserver/: cogserver_main_spec.cr  cogserver_spec.cr
spec/cogutil/: cogutil_spec.cr  config_spec.cr  logger_spec.cr  performance_profiling_spec.cr  randgen_spec.cr
spec/error_handling/: error_handling_spec.cr
spec/integration/: integration_spec.cr
spec/moses/: deme_spec.cr  metapopulation_spec.cr  moses_main_spec.cr  moses_spec.cr  optimization_spec.cr  representation_spec.cr  scoring_spec.cr  types_spec.cr
spec/nlp/: language_processing_capabilities_spec.cr  linguistic_atoms_spec.cr  link_grammar_spec.cr  nlp_main_spec.cr  nlp_spec.cr  text_processor_spec.cr  tokenizer_spec.cr
spec/opencog/: integration_spec.cr  opencog_spec.cr  query_language_spec.cr
spec/pattern_matching/: pattern_matching_main_spec.cr  pattern_matching_spec.cr
spec/pattern_mining/: pattern_mining_main_spec.cr  pattern_mining_spec.cr
spec/performance/: memory_comparison_spec.cr  performance_spec.cr
spec/pln/: pln_spec.cr
spec/ure/: advanced_reasoning_spec.cr  ure_spec.cr
src/: CMakeLists.txt  Cargo.toml  crystalcog.cr  rocksdb.cr
src/agent-zero/: CMakeLists.txt  agent_network.cr  cognitive-tensors.c  cognitive.h  distributed_agents.cr  distributed_network_demo.cr  network_services.cr  opencog-ggml-bridge.c  test-cognitive  test-cognitive.c
src/ai_integration/: ai_bridge.cr
src/atomspace/: atom.cr  atomspace.cr  atomspace_main.cr  atomspace_module.cr  cognitive_kernel.cr  distributed_cluster.cr  distributed_storage.cr  storage.cr  truthvalue.cr
src/attention/: allocation_engine.cr  attention.cr  attention_bank.cr  attention_main.cr  diffusion.cr  rent_collector.cr
src/cogserver/: cogserver.cr  (+1 more)
(+59 files in other folders)
